styles/main.css
/* ------------------ */
/* Aura Config Window */
/* ------------------ */
.grid-aware-auras-aura-config {
	grid-template: 1fr / 1fr;
	position: relative;
}

.grid-aware-auras-aura-config hr {
	width: 100%;
	border-top: 2px groove #FFFFFF;
}

.grid-aware-auras-aura-config .standard-form hr {
	margin: 0.5rem 0;
	border-top: none;
	flex: 0 0 2px;
}

.grid-aware-auras-aura-config .visibility-grid {
	margin: 0 -0.625em;
}

.grid-aware-auras-aura-config .visibility-row {
	display: grid;
	grid-template-columns: 1fr repeat(2, 85px);
	grid-template-rows: min-content min-content;
	grid-template-areas:
		"title owner nonowner"
		"hint hint hint";
	align-items: center;
	padding: 4px 8px;
}

.grid-aware-auras-aura-config .visibility-row:nth-child(even) {
	background-color: rgb(0 0 0 / 5%);
}

.grid-aware-auras-aura-config .visibility-row > .hint {
	grid-area: hint;
}

.grid-aware-auras-aura-config .visibility-row > .title {
	grid-area: title;
	font-weight: bold;
}

.grid-aware-auras-aura-config .visibility-row > .owner {
	grid-area: owner;
	justify-self: center;
}

.grid-aware-auras-aura-config .visibility-row > .nonowner {
	grid-area: nonowner;
	justify-self: center;
}

/* Use a custom style to emulate disabled because we still want to include the inputs in the FormData */
.grid-aware-auras-aura-config fieldset.disabled {
	pointer-events: none;
	opacity: 0.4;
}

.grid-aware-auras-aura-config nav.sheet-tabs.secondary-tabs {
	margin-top: -4px;
    border-top: none;
}

.grid-aware-auras-aura-config .alert {
	margin: 0;
	padding: 4px;
	font-size: var(--font-size-13);
	color: rgb(255 175 0 / 60%);
	background-color: rgb(255 175 0 / 20%);
	border: 1px solid rgb(255 175 0 / 60%);
	border-radius: 3px;
}

.grid-aware-auras-aura-config button.icon {
	flex: 0 0 24px;
	height: 24px;
	width: 24px;
	padding: 0;
	font-size: var(--font-size-12);
    line-height: 24px;
}

.grid-aware-auras-aura-config .automated-item-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

.grid-aware-auras-aura-config .automated-item-list > li {
	display: grid;
	grid-template-columns: 2fr 3fr min-content min-content;
	align-items: center;
	gap: 0.25rem;
	padding: 0.25rem 0;
	border-top: 2px groove transparent;
	border-bottom: 2px groove transparent;
}

.grid-aware-auras-aura-config .automated-item-list.automated-item-list-1-col > li {
	grid-template-columns: 1fr min-content min-content;
}

.grid-aware-auras-aura-config .automated-item-list > li:hover {
	border-color: var(--color-border-dark-secondary);
}

.grid-aware-auras-aura-config .automated-item-list > li > span {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

/* ---------- */
/* Aura Table */
/* ---------- */
.grid-aware-auras-table {
	margin: 0 !important;
	border: none;
	background: none;
}
.grid-aware-auras-table thead {
	background: none;
	border: none;
	color: inherit;
	text-shadow: none;
}

.grid-aware-auras-table td {
	padding: 0.25em 0;
}

.grid-aware-auras-table-item-header {
	display: flex;
	align-items: center;
}

.grid-aware-auras-table-item-header > span {
	flex: 0;
	margin-right: 1rem;
	font-weight: bold;
	white-space: nowrap;
}

.grid-aware-auras-table-item-header > hr {
	flex: 1;
}

.grid-aware-auras-import-export-dialog .dialog-form,
.grid-aware-auras-import-export-dialog textarea {
	height: 100%;
}

.grid-aware-auras-import-export-dialog .dialog-content {
	flex: 1 1 0;
}

/* -------------------------------- */
/* Aura Target Custom Filter Config */
/* -------------------------------- */
#gaa-custom-aura-target-filter-config .filter-list {
	flex-grow: 1;
	overflow-y: auto;
}

#gaa-custom-aura-target-filter-config .filter-item {
	display: grid;
	grid-template:
		"name delete" min-content
		"body delete" min-content
		/ 1fr min-content;
	gap: 0.5rem;
	padding: 0.5rem;
	border: 1px solid var(--color-border-dark-4);
	border-radius: 4px;
}

#gaa-custom-aura-target-filter-config .filter-item:not(:last-child) {
	margin-bottom: 1rem;
}

#gaa-custom-aura-target-filter-config .filter-item .name {
	grid-area: name;
}

#gaa-custom-aura-target-filter-config .filter-item .body {
	grid-area: body;
	padding: 1rem;
	border: 1px solid var(--color-cool-4);
    border-radius: 4px;
	font-family: var(--font-monospace);
}

#gaa-custom-aura-target-filter-config .filter-item .body.is-invalid {
	border-color: var(--color-level-error);
}

#gaa-custom-aura-target-filter-config .filter-item .body span {
	opacity: 0.6;
}

#gaa-custom-aura-target-filter-config .filter-item .body textarea {
	min-height: auto;
	resize: vertical;
	field-sizing: content;
	padding: 0;
	padding-left: 1rem;
	border: none;
	border-radius: 0;
}

#gaa-custom-aura-target-filter-config .filter-item .body.is-invalid textarea {
	color: var(--color-level-error);
}

#gaa-custom-aura-target-filter-config .filter-item .body .error {
	margin-bottom: 0;
	color: var(--color-level-error);
}

#gaa-custom-aura-target-filter-config .filter-item .delete {
	grid-area: delete;
	align-self: center;
}

/* ----------------------- */
/* Custom component common */
/* ----------------------- */
.gaa-dropdown-menu {
	--background-color: var(--color-cool-5, #9f8475);
    --border-color: var(--color-cool-3, #584a75);
    --text-color: var(--color-text-secondary, #e7d1b1);
    --hover-text-color: var(--color-text-emphatic, #f7f3e8);
    --group-separator: var(--color-cool-4, #302831);
    --hover-entry-border: var(--color-cool-4, #302831);
    --hover-entry-background: var(--color-dark-1, #111);

	padding: 4px;
	margin: 0;
	height: max-content;
    min-width: 150px;
    max-width: 360px;
	list-style: none;
    color: var(--text-color);
    background: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 4px;
	box-shadow: 0 3px 6px rgb(0 0 0 / 45%);
}

.themed.theme-light .gaa-dropdown-menu {
	--background-color: #d9d8c8;
    --border-color: #999;
    --text-color: var(--color-text-secondary);
    --hover-text-color: var(--color-text-emphatic);
    --group-separator: #999;
    --hover-entry-border: #999;
    --hover-entry-background: #f0f0e0;
}

.gaa-dropdown-menu > li {
	display: flex;
	align-items: center;
	padding: 6px;
	border: 1px solid transparent;
	font-size: var(--font-size-12);
	cursor: pointer;
	transition: all ease-out 200ms;
}

.gaa-dropdown-menu > li:hover {
	border-color: var(--hover-entry-border);
    background: var(--hover-entry-background);
    color: var(--hover-text-color);
}

.gaa-dropdown-menu > li > i:first-child {
	margin-right: 8px;
}

.gaa-dropdown-menu > li > span {
	flex-grow: 1;
}

.gaa-dropdown-menu > li > i:last-child {
	margin-left: 8px;
	line-height: 15px;
}

.gaa-dropdown-menu > li.gaa-context-menu-separator {
	margin: 4px 0;
	border-bottom: 1px solid var(--group-separator);
}

/* ------------ */
/* Context Menu */
/* ------------ */
gaa-context-menu {
	position: absolute;
	z-index: var(--z-index-tooltip);
}

/* ------------ */
/* Multi-select */
/* ------------ */
gaa-multi-select {
    --input-background-color: var(--color-cool-4);
    --input-border-color: transparent;
    --input-text-color: var(--color-light-3);
    --input-placeholder-color: var(--color-light-4);
    --input-focus-outline-color: var(--color-cool-3);
}

gaa-multi-select:is(:focus, .gaa-multi-select-open) {
	--input-text-color: var(--color-light-1);
}

.themed.theme-light gaa-multi-select {
	--input-background-color: rgba(0, 0, 0, 0.1);
    --input-border-color: var(--color-dark-6);
    --input-text-color: var(--color-dark-2);
    --input-placeholder-color: var(--color-dark-3);
    --input-focus-outline-color: var(--color-warm-2);
}

.themed.theme-light gaa-multi-select:is(:focus, .gaa-multi-select-open) {
	--input-text-color: var(--color-dark-1);
}

gaa-multi-select > .gaa-multi-select-button {
	display: flex;
	align-items: center;

	/* Copied from Foundry's select: */
	width: 100%;
    height: var(--input-height);
    line-height: var(--input-height);
    padding: 0 0.5rem;
    background: var(--input-background-color);
    border: 1px solid var(--input-border-color);
    border-radius: 4px;
    outline: 1px solid transparent;
    color: var(--input-text-color);
    user-select: text;
    font-size: var(--font-size-14);
    transition: outline-color 0.5s;
}

gaa-multi-select:is(:focus, .gaa-multi-select-open) > .gaa-multi-select-button {
	box-shadow: 0 0 5px var(--color-shadow-primary);
	outline: 2px solid var(--input-focus-outline-color);
}

gaa-multi-select .gaa-multi-select-button-label-container {
	flex: 1 0 0;
	display: grid;
}

gaa-multi-select .gaa-multi-select-button-label-container > * {
	grid-column: 1 / 2;
  	grid-row: 1 / 2;
}

gaa-multi-select .gaa-multi-select-button-label-primary {
	overflow: hidden;
    white-space: nowrap;
}

gaa-multi-select .gaa-multi-select-button-label-placeholder {
	color: var(--input-placeholder-color);
}

.gaa-multi-select-dropdown {
	position: absolute;
	z-index: var(--z-index-tooltip);
	width: max-content;
}

.gaa-multi-select-dropdown > menu {
	max-height: 200px;
	overflow-y: auto;
}

.gaa-multi-select-dropdown > menu > li > i {
	margin-right: 6px;
	opacity: 0;
}

.gaa-multi-select-dropdown > menu > li.checked > i {
	opacity: 1;
}

/* --------------------- */
/* Data path autocomplete */
/* --------------------- */
gaa-data-path-autocomplete {
	position: relative;
}

.gaa-data-path-autocomplete-dropdown {
	position: absolute;
	top: 100%;
	width: 100%;
	max-width: unset;
	max-height: 208px;
	overflow-y: auto;
}

/* ------- */
/* Utility */
/* ------- */
.text-bold {
	font-weight: bold;
}

.text-left {
	text-align: left;
}

.text-center {
	text-align: center;
}

.text-right {
	text-align: right;
}

.hr-narrow {
	border: none;
	border-bottom: 1px solid var(--color-border-light-primary);
}

.cursor-help {
	cursor: help;
}

